--- a/stylesheet.css
+++ b/stylesheet.css
@@ -159,6 +159,39 @@ input,textarea {
     padding: 30px 0;
 }
 
+
+/*モーダル*/
+.modal-wrapper {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 100;
+    display: none;
+  }
+  
+  .modal {
+    position: absolute;
+    top: 40%;
+    left: 30%;
+    background-color: #e6ecf0;
+    padding: 40px 0 40px;
+    border-radius: 10px;
+    width: 450px;
+    height: auto;
+    text-align: center;
+  }
+  
+  .fa-times {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    color: rgba(128, 128, 128, 0.46);
+    cursor: pointer;
+  }
+
 @media(max-width: 1000px){
     h1 {
         text-align: center;
@@ -212,6 +245,12 @@ input,textarea {
         padding: 0 50px 50px 50px;
     }
 
+    .modal {
+        left: 15%;
+        border-radius: 7px;
+        width: 300px;
+      }
+
 }
 
 @media(max-width: 670px){
@@ -240,5 +279,10 @@ input,textarea {
 
     .contact-form {
         padding: 0 5px 50px 5px;
+    }
+
+    .modal {
+        border-radius: 7px;
+        width: 60%;
     }
 }
